--- a/js/fullPage.js-master/bower.json
+++ b/js/fullPage.js-master/bower.json
@@ -1,12 +1,15 @@
 {
   "name": "fullpage.js",
-  "version": "2.0.6",
+  "version": "2.0.7",
   "homepage": "http://alvarotrigo.com/fullPage/",
   "authors": [
     "Alvaro Trigo https://github.com/alvarotrigo"
   ],
   "description": "Create  beautiful fullscreen scrolling websites",
-  "main": "jquery.fullPage.js",
+  "main": [
+    "jquery.fullPage.js",
+    "jquery.fullPage.css"
+  ],
   "keywords": [
     "jquery",
     "scrolling",
@@ -24,7 +27,6 @@
   ],
   "dependencies": {
       "jquery.slimscroll": "latest",
-      "jQuery": "latest",
-      "jquery.ui": "latest"
+      "jQuery": "latest"
     }
 }
